derive/tests/samples/parse_errors.stderr
error: expected attribute arguments in parentheses: `rkvc(...)`
 --> tests/samples/parse_errors.rs:4:3
  |
4 | #[rkvc]
  |   ^^^^

error: Unknown attribute key: only valid key is 'crate_path'
  --> tests/samples/parse_errors.rs:10:8
   |
10 | #[rkvc(foo = "bar")]
   |        ^^^

error: expected string literal
  --> tests/samples/parse_errors.rs:16:21
   |
16 | #[rkvc(crate_path = rkvc)]
   |                     ^^^^

error: Unknown attribute key: only valid key is 'label'
  --> tests/samples/parse_errors.rs:23:12
   |
23 |     #[rkvc(foo = "bar")]
   |            ^^^

error: expected attribute arguments in parentheses: `rkvc(...)`
  --> tests/samples/parse_errors.rs:29:7
   |
29 |     #[rkvc]
   |       ^^^^

error: expected string literal
  --> tests/samples/parse_errors.rs:35:20
   |
35 |     #[rkvc(label = foo)]
   |                    ^^^
